--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,27 @@
 page-home {
 
 }
+ #left{
+    
+     
+ }
+ #right{
+    
+    
+}
+#line{
+    background-color: grey;
+    position: absolute;
+    top: 30px;
+    bottom: 300px;
+    width: 1%;
+    left:50%;
+}
+h2{
+    color: grey;
+}
+#reset{
+                bottom: 0px;
+                position: fixed;
+                left:50%;
+}
